# hackdesk

./: .eslintrc.cjs  .gitignore  .oxlintrc.json  CHANGELOG.md  README.md  SOLUTION_SUMMARY.md  components.json  deny.toml  eslint.config.js  hackmd-desktop-app-open-link-analysis.md  hackmd-init-fix.js  implementation-guide.md  improved-cmd.rs  index.html  knip.json  link-debug-tool.js  lint-staged.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tauri-config-check.json  test-link-fix.html  tsconfig.app.json  tsconfig.electron.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml  deploy.yml  electron-release.yml  publish.yml  release.yml  sync-homebrew-tap.yml  test-build.yml  test-on-pr.yml
docs/: config.md  features.md  index.md  install.md  intro.md  issues.md  release.data.ts
docs/.vitepress/: config.ts  constans.ts  constants.ts  types.ts  utils.test.ts  utils.ts
electron/: playwright.config.ts
electron/e2e/: quick-capture-recovery.spec.ts
patches/: codemirror-kakoune@0.2.5.patch
public/: theme-preload.js
scripts/: check-version.js  check-version.ts  electron-build.js  electron-build.ts  electron-dev.js  electron-dev.ts  electron-icons.js  electron-icons.ts  hackmd-openapi-verify.js  hackmd-openapi-verify.ts  release-notes.js  release-notes.ts  release.js  release.ts  sync-homebrew-tap.js  sync-homebrew-tap.test.js  sync-version.js  sync-version.ts
scripts/fixtures/: hackmd-openapi-contract.json
src/: App.css  App.tsx  constants.ts  hooks.ts  main.tsx  routes.tsx  styles.css  utils.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: agent-capability.json  command-palette-capability.json  main-capability.json  settings-capability.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  utils.rs
src-tauri/src/app/: agent.rs  cmd.rs  conf.rs  hackmd.rs  init.js  mac.rs  menu.rs  mod.rs  settings.json  setup.rs  tray.rs  updater.rs
src/components/: ErrorBoundary.test.tsx  ErrorBoundary.tsx  MarkdownEditor.test.tsx  MarkdownEditor.tsx  MarkdownEditorCore.tsx  MarkdownReader.test.tsx  MarkdownReader.tsx  RouteWrapper.tsx  ThemeAppearanceControls.tsx  markdown-editor-types.ts  theme-provider.test.tsx  theme-provider.tsx  useThemeAppearanceDraft.ts
src/hooks/: useCommandPaletteWindow.ts  useEscapeKey.ts
src/lib/: agent.test.ts  agent.ts  desktop-api.ts  electron-actions.test.ts  electron-actions.ts  electron-api.test.ts  electron-api.ts  electron-markdown-renderer.test.ts  electron-markdown-renderer.ts  electron-menu-schema.ts  electron-note-finder.test.ts  electron-note-finder.ts  electron-note-links.test.ts  electron-note-links.ts  electron-note-portability.test.ts  electron-note-portability.ts  electron-note-tags.test.ts  electron-note-tags.ts  electron-quick-open.test.ts  electron-quick-open.ts  electron-recent-notes.test.ts  electron-recent-notes.ts  fuzzy-search.test.ts  fuzzy-search.ts  hackmd-folder-dnd.test.ts  hackmd-folder-dnd.ts  hackmd-folders.test.ts  hackmd-folders.ts  hackmd-note-dnd.test.ts  hackmd-note-dnd.ts  hackmd-path.test.ts  hackmd-path.ts  hackmd.test.ts  hackmd.ts  keyboard-shortcuts.ts  local-vault.ts  query.test.tsx  query.ts  settings-window.ts  settings.test.ts  (+10 more)
src/pages/: Agent.test.tsx  Agent.tsx  CommandPalette.config.tsx  CommandPalette.test.tsx  CommandPalette.tsx  Home.test.tsx  Home.tsx  NativeHome.tsx  QuickCapture.test.tsx  (+4 more)
(+245 files in other folders)
