[package]
name = "hackmd-desktop-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "api-all", "global-shortcut", "macos-private-api"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.33.0", features = ["macros"] }
log = "0.4.20"
anyhow = "1.0.75"

[target.'cfg(not(target_os = "linux"))'.dependencies]
window-shadows = "0.2.0"
window-vibrancy = "0.3.1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
